apps/client/src/styles/styles.scss
// Custom Theming for Angular Material
// For more information: https://material.angular.io/guide/theming
@use '@angular/material' as mat;
@use './theme-colors' as themeColors;

@use 'material.scss';
@use 'root.scss';

@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  @include mat.theme(
    (
      color: (
        theme-type: color-scheme,
        primary: themeColors.$primary-palette,
        tertiary: themeColors.$tertiary-palette,
      ),
      typography: var(--rs-font-family),
      density: 0,
    ),
    $overrides: (
      primary: var(--rs-color-primary),
      surface: var(--rs-color-bg),
      surface-container: var(--rs-color-surface),
      surface-container-high: var(--rs-color-surface-2),
      on-surface: var(--rs-color-text-1),
      on-surface-variant: var(--rs-color-text-muted),
      outline: var(--rs-button-border-color),
      outline-variant: var(--rs-border-color-2)
    )
  );
}

body {
  background: var(--mat-sys-surface);
  color: var(--mat-sys-on-surface);
  padding-top: env(safe-area-inset-top);
}

html,
body {
  font-family: var(--rs-font-family);
}

.mat-mdc-button,
.mat-mdc-card,
.mat-mdc-table,
.mat-mdc-list-item,
.mat-mdc-tab,
.mat-mdc-form-field,
.mat-mdc-menu-item {
  font-family: var(--rs-font-family);
}

h2 {
  line-height: 40px;
  letter-spacing: 2px;
}

rs-standings-table .mat-mdc-table .mat-mdc-row .rank-column,
rs-standings-table .mat-mdc-table .mat-mdc-row .number-column,
rs-result-label span,
rs-fixture-list div.time,
rs-date-picker .mdc-button__label,
rs-match-header-details .result-column .status.is-playing,
rs-match-header-details .event-time {
  font-variant-numeric: tabular-nums;
  font-feature-settings: 'tnum';
}

*,
::before,
::after {
  border-color: var(--rs-border-color-2);
  -webkit-font-smoothing: antialiased;
}

main > *,
header .wrapper {
  max-width: var(--rs-size-max-width);
  margin: auto;
}

p.no-data {
  @apply text-rs-font-size-body-1 text-rs-color-text-2 text-center py-10;
}

router-outlet + * {
  @apply flex flex-col w-full overflow-hidden mb-20;
}

.competition-logo-small {
  @apply w-full h-full min-h-[40px] max-w-[40px] bg-white content-center;
  &-placeholder {
    @apply w-[24px] h-[24px] bg-gray-200 rounded-full;
  }
}
.team-logo-small {
  @apply w-[14px] h-[14px];
  &-placeholder {
    @apply w-[14px] h-[14px] bg-gray-200 rounded-full;
  }
}

.competition-corner {
  @apply h-[40px] justify-center;
}

.animate-fade-in {
  animation-duration: 0.2s;
  animation-name: animate-fade-in;
  animation-fill-mode: backwards;
}

@keyframes animate-fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.animate-drop-from-top {
  animation-duration: 0.25s;
  animation-timing-function: ease-in-out;
  animation-name: animate-drop-from-top;
  animation-fill-mode: backwards;
}

@keyframes animate-drop-from-top {
  0% {
    transform: translateY(-150px);
  }
  100% {
    transform: translateY(0px);
  }
}

